--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs.advanced.way",
   "version": "1.0.0",
-  "description": "docs.advanced.way",
+  "description": "进阶之路",
   "main": "index.js",
   "authors": {
     "name": "wangwei",
