--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.5.4",
+    "@vuepress/plugin-blog": "^1.9.2",
+    "@vuepress/theme-blog": "^2.3.2",
     "gh-pages": "^3.1.0",
     "moment": "^2.28.0",
     "vuepress": "^1.5.4"
