--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@vuepress/plugin-back-to-top": "^1.8.2",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
-    "vuepress": "^1.8.2"
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-code-copy": "^1.0.6",
+    "vuepress-plugin-flowchart": "^1.4.3"
   }
 }
